--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.1",
-    "timeago.js": "^4.0.2"
+    "timeago.js": "^4.0.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
