--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.1",
+    "socket.io-client": "^4.8.1",
     "timeago.js": "^4.0.2",
     "zustand": "^5.0.3"
   },
